--- a/examples/drawing.html
+++ b/examples/drawing.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/example.css">
         <style type="text/css">
             html, body {
-                background: #F51E50;
+                background: ##f5f2e4;
             }
         </style>
     </head>
@@ -14,7 +14,7 @@
         <script src="../js/sketch.js"></script>
         <script>
 
-        var COLOURS = [ '#E3EB64', '#A7EBCA', '#FFFFFF', '#D8EBA7', '#868E80' ];
+        var COLOURS = [ '#000000', '#000000', '#000000', '#000000', '#000000' ];
         var radius = 0;
 
         Sketch.create({
