--- a/examples/drawing.html
+++ b/examples/drawing.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/example.css">
         <style type="text/css">
             html, body {
-                background: ##f5f2e4;
+                background: #f6f1e5;
             }
         </style>
     </head>
